@@ -35,9 +35,10 @@ namespace MonkeyWrench.WebServices
 		/// <param name="db"></param>
 		/// <param name="login"></param>
 		/// <param name="response"></param>
-		public static void Authenticate (HttpContext Context, DB db, WebServiceLogin login, WebServiceResponse response)
+		public static void Authenticate (HttpContext Context, DB db, WebServiceLogin login, WebServiceResponse response, bool @readonly)
 		{
 			string ip = Context.Request.UserHostAddress;
+			int person_id;
 			DBLoginView view = null;
 
 			Console.WriteLine ("WebService.Authenticate (Ip4: {0}, UserHostAddress: {1}, User: {2}, Cookie: {3}, Password: {4}", login.Ip4, Context.Request.UserHostAddress, login.User, login.Cookie, login.Password);
@@ -48,34 +49,50 @@ namespace MonkeyWrench.WebServices
 				return;
 			}
 
+			if (@readonly && string.IsNullOrEmpty (login.Password)) {
+				// Console.WriteLine ("Readonly authentication needs a password.");
+				return;
+			}
+
 			if (!string.IsNullOrEmpty (login.Ip4)) {
 				ip = login.Ip4;
 			} else {
 				ip = Context.Request.UserHostAddress;
 			}
 
-			if (!string.IsNullOrEmpty (login.Password)) {
-				DBLogin result = DBLogin_Extensions.Login (db, login.User, login.Password, ip);
-				if (result != null)
-					view = DBLoginView_Extensions.VerifyLogin (db, login.User, result.cookie, ip);
+			if (@readonly) {
+				DBLogin result = DBLogin_Extensions.Login (db, login.User, login.Password, ip, @readonly);
+				if (result == null) {
+					// Console.WriteLine ("Incorrect Login/Password for readonly login");
+					return;
+				}
+				person_id = result.person_id;
 			} else {
-				view = DBLoginView_Extensions.VerifyLogin (db, login.User, login.Cookie, ip);
-				Console.WriteLine ("Verifying login, cookie: {0} user: {1} ip: {2}", login.Cookie, login.User, ip);
-			}
+				if (!string.IsNullOrEmpty (login.Password)) {
+					DBLogin result = DBLogin_Extensions.Login (db, login.User, login.Password, ip, @readonly);
+					if (result != null)
+						view = DBLoginView_Extensions.VerifyLogin (db, login.User, result.cookie, ip);
+				} else {
+					view = DBLoginView_Extensions.VerifyLogin (db, login.User, login.Cookie, ip);
+					Console.WriteLine ("Verifying login, cookie: {0} user: {1} ip: {2}", login.Cookie, login.User, ip);
+				}
 
-			if (view == null) {
-				Console.WriteLine ("Invalid credentials.");
-				return;
+				if (view == null) {
+					Console.WriteLine ("Invalid credentials.");
+					return;
+				}
+				person_id = view.person_id;
 			}
+			Console.WriteLine ("Valid credentials");
 
 			LoginResponse login_response = response as LoginResponse;
 			if (login_response != null) {
-				login_response.Cookie = view.cookie;
-				login_response.FullName = view.fullname;
-				login_response.ID = view.person_id;
+				login_response.Cookie = view != null ? view.cookie : null;
+				login_response.FullName = view != null ? view.fullname : null;
+				login_response.ID = person_id;
 			}
 
-			DBPerson person = DBPerson_Extensions.Create (db, view.person_id);
+			DBPerson person = DBPerson_Extensions.Create (db, person_id);
 
 			Console.WriteLine ("Roles for '{0}': {1}", login.User, person.roles);
 
@@ -83,10 +100,10 @@ namespace MonkeyWrench.WebServices
 				response.UserRoles = person.roles.Split (new char [] { ',' }, StringSplitOptions.RemoveEmptyEntries);
 		}
 
-		public static void VerifyUserInRole (HttpContext Context, DB db, WebServiceLogin login, string role)
+		public static void VerifyUserInRole (HttpContext Context, DB db, WebServiceLogin login, string role, bool @readonly)
 		{
 			WebServiceResponse dummy = new WebServiceResponse ();
-			Authenticate (Context, db, login, dummy);
+			Authenticate (Context, db, login, dummy, @readonly);
 
 			if (!dummy.IsInRole (role)) {
 				Console.WriteLine ("The user '{0}' has the roles '{1}', and requested role is: {2}", login.User, dummy.UserRoles == null ? "<null>" : string.Join (",", dummy.UserRoles), role);
