@@ -1,3 +1,14 @@
+2009-12-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* WebServices.asmx.cs: Updated authentication methods with new readonly
+	parameter, and for the buildbot methods use the readonly mode.
+
+	* Download.aspx.cs: No need to store credentials here, use the readonly
+	mode.
+
+	* Authentication.cs: Updated authentication methods with new readonly
+	parameter.
+
 2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* Authentication.cs: Don't throw exception on invalid credentials,
